tests/lex/invalid/hex_literal_leading_underscore.zn
def f() {
    var x = 0x_ab;
}
